
# $Id: Makefile.am,v 1.1 2003/11/22 13:57:10 alor Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_dns_spoof.la

ec_dns_spoof_la_CFLAGS = @EC_CFLAGS@

ec_dns_spoof_la_SOURCES = dns_spoof.c

ec_dns_spoof_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_dns_spoof_la_LIBS = 

# vim:ts=4:noexpandtab

