
# $Id: Makefile.am,v 1.7 2003/10/12 15:26:04 alor Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_dummy.la

ec_dummy_la_CFLAGS = @PL_CFLAGS@

ec_dummy_la_SOURCES = dummy.c

ec_dummy_la_LDFLAGS = @PLUG_LDFLAGS@ -module -avoid-version

LIBS =
ec_dummy_la_LIBS = 

# vim:ts=4:noexpandtab

