FIND_PACKAGE(SWIG)

IF(SWIG_FOUND)
  SET( SWIG_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/ettercap.i )

  # Try to find all the stuff so that we can build LUA plugin.
  FIND_PACKAGE(Lua51)
  FIND_PACKAGE(Ruby)

  IF(LUA51_FOUND)
    ADD_SUBDIRECTORY(lua)
  ENDIF(LUA51_FOUND)

  IF(RUBY_FOUND)
    ADD_SUBDIRECTORY(ruby)
  ENDIF(RUBY_FOUND)

ENDIF(SWIG_FOUND)

