
option(ENABLE_DYNAMIC "Enable dynamic plugin support" OFF)
option(ENABLE_DYNAMIC_LUA "Enable LUA plugin support" OFF)
option(ENABLE_DYNAMIC_RUBY "Enable Ruby plugin support" OFF)
option(ENABLE_DYNAMIC_PYTHON "Enable Python plugin support" OFF)

IF(ENABLE_DYNAMIC)
  FIND_PACKAGE(SWIG REQUIRED)

  SET( SWIG_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/ettercap.i )

  # Try to find all the stuff so that we can build LUA plugin.

  IF(ENABLE_DYNAMIC_LUA)
    FIND_PACKAGE(Lua51 REQUIRED)
    ADD_SUBDIRECTORY(lua)
  ENDIF(ENABLE_DYNAMIC_LUA)

  IF(ENABLE_DYNAMIC_RUBY)
    FIND_PACKAGE(Ruby REQUIRED)
    ADD_SUBDIRECTORY(ruby)
  ENDIF(ENABLE_DYNAMIC_RUBY)

  IF(ENABLE_DYNAMIC_PYTHON)
    FIND_PACKAGE(PythonLibs REQUIRED)
    ADD_SUBDIRECTORY(python)
  ENDIF(ENABLE_DYNAMIC_PYTHON)
ENDIF(ENABLE_DYNAMIC)

