
option(ENABLE_DYNAMIC_LUA "Enable LUA plugin support" OFF)
option(ENABLE_DYNAMIC_RUBY "Enable Ruby plugin support" OFF)


# Try to find all the stuff so that we can build LUA plugin.
IF(ENABLE_DYNAMIC_LUA)
  ADD_SUBDIRECTORY(lua)
ENDIF(ENABLE_DYNAMIC_LUA)

IF(ENABLE_DYNAMIC_RUBY)
  FIND_PACKAGE(SWIG REQUIRED)
  SET( SWIG_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/ettercap.i )
  FIND_PACKAGE(Ruby REQUIRED)
  ADD_SUBDIRECTORY(ruby)
ENDIF(ENABLE_DYNAMIC_RUBY)

