
# $Id: Makefile.am,v 1.1 2003/11/16 15:03:42 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_find_conn.la

ec_find_conn_la_CFLAGS = @PL_CFLAGS@

ec_find_conn_la_SOURCES = find_conn.c

ec_find_conn_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_find_conn_la_LIBS = 

# vim:ts=4:noexpandtab

