
# $Id: Makefile.am,v 1.2 2004/04/21 10:02:46 alor Exp $

include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_find_ettercap.la

ec_find_ettercap_la_CFLAGS = @PL_CFLAGS@ @LNETINC@

ec_find_ettercap_la_SOURCES = find_ettercap.c

ec_find_ettercap_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_find_ettercap_la_LIBS = 

# vim:ts=4:noexpandtab

