
# $Id: Makefile.am,v 1.1 2003/12/07 13:42:42 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_find_ip.la

ec_find_ip_la_CFLAGS = @EC_CFLAGS@

ec_find_ip_la_SOURCES = find_ip.c

ec_find_ip_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_find_ip_la_LIBS = 

# vim:ts=4:noexpandtab

