
# $Id: Makefile.am,v 1.1 2003/10/12 15:26:33 alor Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_finger.la

ec_finger_la_CFLAGS = @PL_CFLAGS@

ec_finger_la_SOURCES = finger.c

ec_finger_la_LDFLAGS = @PLUG_LDFLAGS@ -module -avoid-version

LIBS =
ec_finger_la_LIBS = 

# vim:ts=4:noexpandtab

