
# $Id: Makefile.am,v 1.1 2003/10/12 17:40:43 alor Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_finger_submit.la

ec_finger_submit_la_CFLAGS = @PL_CFLAGS@

ec_finger_submit_la_SOURCES = finger_submit.c

ec_finger_submit_la_LDFLAGS = @PLUG_LDFLAGS@ -module -avoid-version

LIBS =
ec_finger_submit_la_LIBS = 

# vim:ts=4:noexpandtab

