
# $Id: Makefile.am,v 1.1 2003/12/07 14:59:44 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_gre_relay.la

ec_gre_relay_la_CFLAGS = @PL_CFLAGS@

ec_gre_relay_la_SOURCES = gre_relay.c

ec_gre_relay_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_gre_relay_la_LIBS = 

# vim:ts=4:noexpandtab

