
# $Id: Makefile.am,v 1.2 2003/12/18 14:17:18 alor Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_gre_relay.la

ec_gre_relay_la_CFLAGS = @PL_CFLAGS@ @LNETINC@

ec_gre_relay_la_SOURCES = gre_relay.c

ec_gre_relay_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_gre_relay_la_LIBS = 

# vim:ts=4:noexpandtab

