
# $Id: Makefile.am,v 1.1 2004/03/19 13:55:02 alor Exp $

include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_gw_discover.la

ec_gw_discover_la_CFLAGS = @PL_CFLAGS@

ec_gw_discover_la_SOURCES = gw_discover.c

ec_gw_discover_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_gw_discover_la_LIBS = 

# vim:ts=4:noexpandtab

