
# $Id: Makefile.am,v 1.1 2004/07/06 10:56:23 alor Exp $

include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_isolate.la

ec_isolate_la_CFLAGS = @PL_CFLAGS@

ec_isolate_la_SOURCES = isolate.c

ec_isolate_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_isolate_la_LIBS = 

# vim:ts=4:noexpandtab

