
# $Id: Makefile.am,v 1.2 2004/07/06 15:56:01 alor Exp $

include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_isolate.la

ec_isolate_la_CFLAGS = @PL_CFLAGS@ @LNETINC@

ec_isolate_la_SOURCES = isolate.c

ec_isolate_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_isolate_la_LIBS = 

# vim:ts=4:noexpandtab

