
# $Id: Makefile.am,v 1.1 2003/10/27 15:34:59 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_link_type.la

ec_link_type_la_CFLAGS = @PL_CFLAGS@

ec_link_type_la_SOURCES = link_type.c

ec_link_type_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_link_type_la_LIBS = 

# vim:ts=4:noexpandtab

