
# $Id: Makefile.am,v 1.1 2003/12/03 14:50:00 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_pptp_chapms1.la

ec_pptp_chapms1_la_CFLAGS = @PL_CFLAGS@

ec_pptp_chapms1_la_SOURCES = pptp_chapms1.c

ec_pptp_chapms1_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_pptp_chapms1_la_LIBS = 

# vim:ts=4:noexpandtab

